# bar

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: django.yml  run_tests.yml
apps/account/: admin.py  forms.py  manager.py  models.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py  0002_user_groups_user_user_permissions_alter_user_email_and_more.py
apps/account/tests/: test_responses.py
apps/account/utils/: redis_auth_handler.py
apps/account/v1/: serializers.py  tasks.py  token_logics.py  urls.py  view_logics.py  views.py
apps/applicant/: actions.py  admin.py  apps.py  models.py
apps/applicant/migrations/: 0001_initial.py  0002_delete_acceptedapplicant_deletedapplicant_and_more.py
apps/applicant/tests/: test_logics.py
apps/applicant/v1/: applicant_logics.py  schema.py  schema_inputs.py  schema_types.py  serializers.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
config/settings/: base.py  local.py  prod.py
docker/dev/python/: Dockerfile
docker/prod/nginx/: Dockerfile  default.conf
docker/prod/python/: Dockerfile
requirements/: base.txt  local.txt  prod.txt
utils/db/: __init__.py  base.py  managers.py  querysets.py  soft_delete.py
