[tool.poetry]
name = "bar-dependencies"
version = "0.1.0"
description = ""
authors = ["Amir Kouhkan <amirkouhkan1@gmail.com>"]
readme = "README.md"
packages = [{include = "bar_dependencies"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
